--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="style/button.css">
   </head>
   <body>
     <div id="buttonDiv">
@@ -10,5 +10,5 @@
       <p>Choose a different background color!</p>
     </div>
   </body>
-  <script src="options.js"></script>
+  <script src="script/options.js"></script>
 </html>
