--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="style/button.css">
   </head>
   <body>
     <button id="changeColor"></button>
-	<script src="popup.js"></script>
+	<script src="script/popup.js"></script>
   </body>
 </html>
