Add input & button

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style/button.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+  <span class="filter-area">
+    <input id="filter-input" type="text" placeholder="过滤">
+    <button id="getTablesButton">过滤</button>
+  </span>
 	<script src="script/popup.js"></script>
   </body>
 </html>
