--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style/button.css">
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
     <div id="buttonDiv">
