Finished basic function

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <span class="filter-area">
-    <input id="filter-input" type="text" placeholder="过滤">
+    <input id="filter-input" type="text" placeholder="关键词">
     <button id="getTablesButton">过滤</button>
   </span>
 	<script src="script/popup.js"></script>
