Try find td by just selection

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
+    请选中想要筛选的列头并右键
   <span class="filter-area">
     <input id="filter-input" type="text" placeholder="关键词">
     <button id="getTablesButton">过滤</button>
