--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,20 @@
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-    请选中想要筛选的列头并右键
-  <span class="filter-area">
-    <input id="filter-input" type="text" placeholder="关键词">
-    <button id="getTablesButton">过滤</button>
-  </span>
+    <div style="width: 280px;">
+      <label><input type="checkbox" checked ="checked" id="tm-onoff" />已启用</label>
+      <hr>
+      <label><input type="checkbox" id="tm-onoff-keyword" />自动保存关键词</label>
+      <br>
+      <span class="tm-tips">&nbsp;&nbsp;&nbsp;&nbsp;（开启后刷新页面后可自动过滤）</span>
+      <br>
+      <label><input type="checkbox" checked ="checked" id="tm-onoff-test" />测试</label>
+      <br>
+      <hr>
+      <span class="tm-info">Open-sourced on <a href="https://github.com/kingcos/TableManners">kingcos/TableManners</a></span>
+      <br>
+      <span class="tm-info">Powered by <a href="https://kingcos.me">kingcos.me</a></span>
+    </div>
 	<script src="script/popup.js"></script>
   </body>
 </html>
