Finished disabled function

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
       <br>
       <span class="tm-tips">&nbsp;&nbsp;&nbsp;&nbsp;（开启后刷新页面后可自动过滤）</span>
       <br>
-      <label><input type="checkbox" checked ="checked" id="tm-onoff-test" />测试</label>
+      <!-- <label><input type="checkbox" checked ="checked" id="tm-onoff-test" />测试</label> -->
       <br>
       <hr>
       <span class="tm-info">Open-sourced on <a href="https://github.com/kingcos/TableManners">kingcos/TableManners</a></span>
