Add designed icons

--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/style.css">
   </head>
-  <body>
+  <body style="background-color: #C4CED5; color: #464655;">
     <div style="width: 280px;">
+      <h2>TableManners</h2>
+      Filter your &lt;table&gt;s.
+      <br>
+      <hr>
       <label><input type="checkbox" checked ="checked" id="tm-onoff" />已启用</label>
       <!-- <hr>
       <label><input type="checkbox" id="tm-onoff-keyword" />自动保存关键词</label>
@@ -15,9 +19,9 @@
       <!-- <label><input type="checkbox" checked ="checked" id="tm-onoff-test" />测试</label> -->
       <br>
       <hr>
-      <span class="tm-info">Open-sourced on <a href="https://github.com/kingcos/TableManners">kingcos/TableManners</a></span>
+      <span class="tm-info">Open-sourced on <a href="https://github.com/kingcos/TableManners">kingcos/TableManners</a>.</span>
       <br>
-      <span class="tm-info">Powered by <a href="https://kingcos.me">kingcos.me</a></span>
+      <span class="tm-info">Powered by <a href="https://kingcos.me">kingcos.me</a>.</span>
     </div>
 	<script src="script/popup.js"></script>
   </body>
